--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Liaojinhua.github.com : My personal blog" />
+    <meta name="description" content="liaojinhua.github.com : My personal blog" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Liaojinhua.github.com</title>
+    <title>liaojinhua.github.com</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/LiaoJinhua">View on GitHub</a>
 
-          <h1 id="project_title">Liaojinhua.github.com</h1>
+          <h1 id="project_title">liaojinhua.github.com</h1>
           <h2 id="project_tagline">My personal blog</h2>
 
         </header>
